--- a/NowWhatApp/index.html
+++ b/NowWhatApp/index.html
@@ -3,17 +3,41 @@
     <head>
         <title></title>
         <meta charset="utf-8" />
+        <link href="kendo/styles/kendo.common.min.css" rel="stylesheet" />
+        <link href="kendo/styles/kendo.default.min.css" rel="stylesheet" />
         <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
         <link href="styles/main.css" rel="stylesheet" />
 
         <script src="cordova.js"></script>
         <script src="kendo/js/jquery.min.js"></script>
-        <script src="kendo/js/kendo.mobile.min.js"></script>
+        <script src="kendo/js/kendo.all.min.js"></script>
 
         <script src="scripts/app.js"></script>
 
     </head>
     <body>
-        
+        <div data-role="view" id="home-view" data-id="home-view" data-layout="main-layout" data-title="Home">
+            <button data-role="button" id="capture-btn">Capture moment</button>
+        </div>
+
+        <div data-role="layout" id="main-layout" data-id="main-layout">
+            <header data-role="header">
+                <div data-role="navbar">
+                    <span data-role="view-title"></span>
+                </div>
+            </header>
+            <footer data-role="footer">
+                <div data-role="tabstrip">
+                    <a href="#home-view" data-icon="home">Home</a>
+                    <a href="views/pictures-view.html#pictures-view" data-icon="info">Pictures</a>
+                </div>
+            </footer>
+        </div>
+
+        <script id="scrollview-batch-template" type="text/x-kendo-template">
+            <div>
+                <p>#: name #</p>
+            </div>
+        </script>
     </body>
 </html>
